--- a/final-project.html
+++ b/final-project.html
@@ -36,7 +36,7 @@
   <summary>My Childhood</summary>
   <p>I grew up loving to write but didn't imagine that I'd be working in HTML and CSS. Life is funny.</p>
 </details>
-<img src= “” alt = WD4E></a>
+<img src= “https://github.com/jbten/jbten.github.io/blob/main/big-wdfe-image.png” alt = WD4E></a>
 <p align=center>
 	This page was created by Jonathon Braden & Colleen van Lent. To learn more more about web design, visit <a href="https://intro-webdesign.com/">Intro to Web Design</a>.
 </p>
