--- a/final-project.html
+++ b/final-project.html
@@ -5,7 +5,7 @@
     <title>HTML5project-Jonathon Braden</title>
 </head>
 <body>
-	<h1> Jonathon Braden</h1>
+	<h1> Jonathan Braden</h1>
 <nav>
 		<a href="">One</a>
 		<a href="">Two</a>
