--- a/final-project.html
+++ b/final-project.html
@@ -38,5 +38,5 @@
 </details>
 <a href="https://intro-webdesign.com/"><img src= “big-wdfe-image.png” alt ="WD4E"></a>
 <p align=center>
-	This page was created by Jonathon Braden & Colleen van Lent. To learn more more about web design, visit <a href="https://intro-webdesign.com/">Intro to Web Design</a>.
+	This excellent page was created by Jonathon Braden & Colleen van Lent. To learn more more about web design, visit <a href="https://intro-webdesign.com/">Intro to Web Design</a>.
 </p>
