--- a/final-project.html
+++ b/final-project.html
@@ -10,7 +10,7 @@
 		<a href="">One</a>
 		<a href="">Two</a>
 		<a href="">Three</a>	
-		<a href="">Four Hundred 22</a>
+		<a href="">Four Hundred 11</a>
 </nav>
 <p>
 	<h1>Favorite Foods</h1>
@@ -36,7 +36,7 @@
   <summary>My Childhood</summary>
   <p>I grew up loving to write but didn't imagine that I'd be working in HTML and CSS. Life is funny.</p>
 </details>
-<a href="https://intro-webdesign.com/"><img src= “https://jbten.github.io/big-wdfe-image.png” alt ="WD4E"></a>
+<a href="https://intro-webdesign.com/"><img src= “https://www.intro-webdesign.com/images/newlogo.png” alt ="WD4E"></a>
 <p align=center>
 	This excellent page was created by Jonathon Braden & Colleen van Lent. To learn more more about web design, visit <a href="https://intro-webdesign.com/">Intro to Web Design</a>.
 </p>
